# TopOpt

./: .gitignore  AGENT_PROMPTS.md  ARCHITECTURE.md  README.md  ROADMAP.md
.claude/: settings.json
.github/workflows/: ci.yml
app/: .gitignore  README.md  TopOpt-Info.plist
app/.build-core/: Makefile  cmake_install.cmake
app/TopOpt/: ContentView.swift  TopOptApp.swift
app/TopOpt.xcodeproj/: project.pbxproj
app/TopOptKit/: Package.swift  occt-frameworks.generated.json  vendor
app/scripts/: build_core.sh  build_occt_ios.sh  ios.toolchain.cmake
build-asan/: Makefile  cmake_install.cmake  test_minimize_plastic
ci/: ci.yml
core/: CMakeLists.txt  vcpkg.json
core/build-release/: Makefile  cmake_install.cmake  demo_job_local.json  roundtrip_block_ascii.stl  roundtrip_block_bin.stl  roundtrip_holed.stl  test_anchor_integrity  test_assembly  test_beam  test_cg  test_cli  test_export  test_fea  test_gate_v2  test_job  test_mask  test_mask_face  test_materials  test_mbb  test_minimize_plastic  test_mma  test_orient  test_report  test_rmin  test_settings  test_simp  test_step  test_stl  test_stress  test_tag  test_traction  test_v3  test_v4  test_v5  test_variants  test_voxel  topopt-cli
core/build-release/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp26915  LastTest.log.tmpb9b78
core/build-release/cli_out1/: variant_030.stl  variant_050.stl  variant_070.stl
core/build-release/cli_out2/: report.json
core/include/topopt/: clearance.hpp  coarsen.hpp  fea.hpp  fields.hpp  job.hpp  loadcase.hpp  materials.hpp  mesh.hpp  observability.hpp  orient.hpp  part.hpp  pipeline.hpp  production.hpp  report.hpp  segment.hpp  settings.hpp  simp.hpp  step.hpp  stl.hpp  threemf.hpp  version.hpp  voxel.hpp  warm_start.hpp
core/src/: version.cpp
core/src/cli/: job.cpp  loadcase.cpp  main.cpp  run_job.cpp
core/src/fea/: assembly.cpp  fea_matfree.hpp  fea_reduced.hpp  hex_element.cpp  matfree.cpp  multigrid.cpp  recycle.cpp  recycle.hpp
core/src/io/: face_tag.cpp  fields.cpp  part.cpp  segment.cpp  step.cpp  stl.cpp  threemf.cpp
core/src/materials/: materials.cpp  materials.json
core/src/mesh/: mesh.cpp
core/src/orient/: orient.cpp
core/src/settings/: report.cpp  rules.json  settings.cpp
core/src/simp/: minimize_plastic.cpp  observability.cpp  production.cpp  simp.cpp  warm_start.cpp
core/src/voxel/: clearance.cpp  voxelize.cpp
core/tests/fixtures/: benchmarks.json
core/tests/fixtures/demo/: expected_values.json  job.json  l-bracket.step  mma2_stress_fixture.json
core/tests/fixtures/fea/: hex_stiffness_reference.json  hex_stiffness_ti_reference.json
core/tests/fixtures/infeasible/: iterations_96_designbox.csv
core/tests/fixtures/mesh/: plate_bore.stl
core/tests/fixtures/orient/: expected_values.json  hook.stl
core/tests/fixtures/step/: cube.step  cylinder.step  expected_values.json
core/tests/fixtures/stl/: broken_open_cube.stl  cube_10mm.stl  expected_values.json  sphere_r10mm.stl
core/tests/harness/: active_domain_gate.cpp  active_domain_probe.cpp  amg_lean.hpp  amg_lean_probe.cpp  amg_probe.cpp  amg_sa.hpp  block_frag_probe.cpp  cg_tol_probe.cpp  gizmo_pick_oracle.cpp  mixed_precision_probe.cpp  mma_probe.cpp  per_iter_probe.cpp  recycle_cost_probe.cpp  recycle_probe.cpp  removal_probe.cpp  warm_start_probe.cpp
core/tests/property/: test_mask.cpp  test_v3.cpp
core/tests/tools/: segment_evidence.cpp
core/tests/unit/: test_3mf.cpp  test_assembly.cpp  test_cg.cpp  test_clearance.cpp  test_export.cpp  test_fea.cpp  test_fields.cpp  test_galerkin_cache.cpp  test_job.cpp  test_mask_face.cpp  test_materials.cpp  test_matfree.cpp  test_matfree_threads.cpp  test_mgcg.cpp  test_mgcg_matfree.cpp  test_mixed_precision.cpp  test_observability.cpp  test_orient.cpp  test_recycle.cpp  test_report.cpp  test_resample.cpp  test_rmin.cpp  test_segment.cpp  test_segment_vs_step.cpp  test_settings.cpp  test_simp.cpp  test_step.cpp  test_stl.cpp  test_tag.cpp  test_traction.cpp  test_variants.cpp  test_voxel.cpp  test_warm_start.cpp
core/tests/validation/: test_active_domain.cpp  test_anchor_integrity.cpp  test_beam.cpp  test_clearance_parity.cpp  test_cli.cpp  test_coarsen_rule.cpp  test_conditional_projection.cpp  test_design_domain.cpp  test_designbox_anchor_pad.cpp  test_designbox_grid_report.cpp  test_designbox_padding.cpp  test_designbox_reduction.cpp  test_face_protection.cpp  test_face_protection_parity.cpp  test_gate_v2.cpp  test_ladder_rung_count.cpp  test_load_retention_connectivity.cpp  test_loadcase_small_face.cpp  test_mbb.cpp  test_mesh_job.cpp  test_minimize_plastic.cpp  test_mma.cpp  test_mma_projection.cpp  test_mma_projection_gate.cpp  test_observability_capture.cpp  test_production_parity.cpp  test_rung_infeasible.cpp  test_savings_part_relative.cpp  test_stress.cpp  test_v4.cpp  test_v5.cpp  test_warm_start_integration.cpp
docs/: AGENT_PROMPTS.md  ARCHITECTURE.md  DECISIONS.md  ROADMAP.md
docs/design/: MOD_force_gravity_rework.md  PrintParams_TopOpt.dc.html  TopOpt.dc.html  TopOpt_force_proto.html  gizmo_redesign.html
docs/handoffs/: 001-M1.1-repo-scaffold.md  002-M1.1-restore-green-ci.md  003-M1.2-materials-loader.md  004-M1.2b-loader-tests.md  005-M1.3-stl-import.md  006-M1.3-restore-sphere-volume-assertion.md  007-M1.4-step-import.md  008-M1.5-solid-voxelizer.md  009-M1.6-face-tagging.md  010-M2.1-hex-element.md  011-M2.2-global-assembly.md  012-M2.3-cg-solver.md  013-M2.4-gate-v1-beam-validation.md  014-M3.1-void-dof-gate.md  015-M3.2-simp-compliance-sensitivity.md  016-M3.3-density-filter-oc.md  017-M3.4-full-3d-loop-gate-v2.md  018-M3.5-marching-cubes-gate-v3.md  019-M3.6-multi-variant-runner.md  020-M3.7-passive-regions.md  021-M4.1-transversely-isotropic-hex.md  022-M4.2-self-weight-loading.md  023-M4.3-orientation-candidates.md  024-M4.4-orientation-scoring.md  025-M5.1-settings-rule-engine.md  026-M5.2-job-report.md  027-M5.2b-min-feature-warning.md  028-M5.3-minimize-plastic.md  029-M6.1-export-3mf-stl.md  030-M6.2-topopt-cli.md  031-M6.3-heaviside-projection.md  032-M7.0a-progress-cancellation.md  (+160 more)
(+255 files in other folders)
